--- a/ex24/index.html
+++ b/ex24/index.html
@@ -3,11 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        iframe#video{
+            width: 50vw;
+            height: 400px;
+            display: block;
+            margin: auto;
+        }
+    </style>
+
     <title>estudos de iframes</title>
 </head>
 <body>
     <h1>testando o uso de iframes</h1>
-        <p>Acessando o site do <a href="https://www.cursoemvideo.com" target="_blank">CursoemVideo</a> para aprender a programar</p>
+    <p>vamos testar com listas</p>
+        <ul>
+            <li>opção 01: <a href=" https://cursoemvideo.com" target="frame">site do curso em video</a></li>
+            <li>opção 02: <a href="tabela.html" target="frame">tabela </a></li>
+        </ul>
+        <p>Acessando o site do <iframe  id="video" src="" name="frame" frameborder="0"></iframe>CursoemVideo para aprender a programar</p>
     
 </body>
 </html>
