--- a/ex24/index.html
+++ b/ex24/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        iframe#video{
+        iframe#video ,   iframe#tabela{
             width: 50vw;
             height: 400px;
             display: block;
             margin: auto;
         }
+
+        iframe#tabela
     </style>
 
     <title>estudos de iframes</title>
@@ -21,7 +23,7 @@
             <li>opção 01: <a href=" https://cursoemvideo.com" target="frame">site do curso em video</a></li>
             <li>opção 02: <a href="tabela.html" target="frame">tabela </a></li>
         </ul>
-        <p>Acessando o site do <iframe  id="video" src="" name="frame" frameborder="0"></iframe>CursoemVideo para aprender a programar</p>
-    
+    <p>Acessando o site do <iframe  id="video" src="" name="frame" frameborder="0"></iframe>CursoemVideo para aprender a programar</p>
+    <iframe id="tabela" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRFtR5uR9z_acyoq71brHkzluUGtl1Z4FQfqSQMSBdXV-UKKbpbwe-VDx6ExhllXuVa5TqY1JcH69-F/pubhtml?widget=true&amp;headers=false"></iframe>
 </body>
 </html>
